Added HomePage View and Movie Interface, MovieServices

--- a/MovieShopMVC/Views/Home/Index.cshtml
+++ b/MovieShopMVC/Views/Home/Index.cshtml
@@ -3,18 +3,15 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>
-    @ViewBag.PageTitle
-</h1>
-<h3>
-    Total Top Movies : @ViewData["TotalMovies"]
-</h3>
-<div>
-    <ul>
-        @foreach (var movie in Model)   //allias with the top line
-        {
-            <li>@movie.Id</li>
-            <li>@movie.Title</li>
-        }
-    </ul>
+<div class="rounded">
+    <div class="container-fluid bg-light">
+        <div class="row">
+            @foreach (var movie in Model)
+            {
+                <div class="col-6 col-lg-3 col-sm-4 col-xl-2">
+                    @await Html.PartialAsync("_movieCard", movie)
+                </div>
+            }
+        </div>
+    </div>
 </div>
