--- a/MovieShopMVC/Views/Movies/Details.cshtml
+++ b/MovieShopMVC/Views/Movies/Details.cshtml
@@ -1,3 +1,65 @@
 ﻿@model ApplicationCore.Models.MovieDetailsResponseModel
 
-<h1>@Model.Title</h1>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <img src="@Model.PosterUrl" alt="@Model.Title"/>
+        </div>
+        <div class="col">
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <h1>@Model.Title</h1>
+                 
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <p>@Model.Tagline</p>
+                    </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    @Model.RunTime ms | @Model.ReleaseDate
+                    @foreach (var genre in Model.Genres )   //get back genre from Movie Service
+                    {
+                        <span class="badge bg-secondary rounded-pill">@genre.Name</span>
+                    }
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center bg-warning">@Model.Rating</li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">@Model.Overview</li>
+            </ul>
+        </div>
+        <div class="col">
+            <div class="d-grid gap-2 col-6 mx-auto">
+                <button class="btn btn-outline-light text-white" type="button">REVIEW</button>
+                <button class="btn btn-outline-light text-white" type="button">TRAILER</button>
+                <button class="btn btn-white" type="button">BUY @Model.Price</button>
+                <button class="btn btn-white" type="button">WATCH MOVIE</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h3>MOVIE FACTS</h3>
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Release Date
+                    <span class="badge bg-dark rounded-pill">@Model.ReleaseDate</span>
+                </li>                
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Run Time
+                    <span class="badge bg-dark rounded-pill">@Model.RunTime</span>
+                </li>                
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Box Office
+                    <span class="badge bg-dark rounded-pill">@Model.Price</span>
+                </li>                
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Budget
+                    <span class="badge bg-dark rounded-pill">@Model.ReleaseDate</span>
+                </li>
+            </ul>
+        </div>
+        <div class="col">
+            <h3>CASTS</h3>
+        </div>
+    </div>
+</div>
