--- a/MovieShopMVC/Views/Movies/Details.cshtml
+++ b/MovieShopMVC/Views/Movies/Details.cshtml
@@ -18,10 +18,14 @@
                     @Model.RunTime ms | @Model.ReleaseDate.GetValueOrDefault().Year
                     @foreach (var genre in Model.Genres )   //get back genre from Movie Service
                     {
-                        <span class="badge bg-secondary rounded-pill">@genre.Name</span>
+                        <span class="badge bg-secondary rounded-pill">
+                            <a style="text-decoration: none" class="text-white" asp-controller="Genre" asp-action="Details" asp-route-id ="@genre.Id">@genre.Name</a>
+                        </span>
                     }
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center bg-warning">@Model.Rating</li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <span class="badge bg-warning rounded-pill">@Model.Rating</span>
+                </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">@Model.Overview</li>
             </ul>
         </div>
@@ -64,7 +68,9 @@
                 @foreach (var cast in Model.Casts)
                 {
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <img src ="@cast.ProfilePath" width="50px" height="50px"/>
+                        <a asp-controller="Cast" asp-action="Details" asp-route-id="@cast.Id">
+                            <img src="@cast.ProfilePath" width="50px" height="50px" />
+                        </a>
                         <p>@cast.Name </p>
                         <p>@cast.Character</p>
                     </li>
