Added UserService Favourite and Purchases

--- a/MovieShopMVC/Views/Shared/_Layout.cshtml
+++ b/MovieShopMVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@*@model ApplicationCore.Models.GenreResponseModel*@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
