--- a/MovieShopMVC/Views/Genre/Details.cshtml
+++ b/MovieShopMVC/Views/Genre/Details.cshtml
@@ -1,20 +1,25 @@
 ﻿
 @model ApplicationCore.Models.GenreResponseModel
+@inject ApplicationCore.ServiceInterfaces.IMovieService movieService
+
 
 <h1>@Model.Name Movie</h1>
 
 <div class="rounded">
     <div class="container-fluid bg-light">
         <div class="row">
-            @foreach (var movie in Model.Movies)
+            @foreach (var movie in await movieService.GetTopRevenueMovies())
             {
-                <div class="col-6 col-lg-3 col-sm-4 col-xl-2">
-                    <div class="card mb-4">
-                        <a asp-controller="Movies" asp-action="Details" asp-route-id="@movie.Id">
-                            <img src="@movie.PosterUrl" class="img-fluid" alt="@movie.Title" />
-                        </a>
-                    </div>
-                </div>
+                var movieCards = movieService.GetMovieDetails(movie.Id);
+                foreach (var genre in movieCards.Result.Genres)
+                {
+                    if (genre.Id == Model.Id)
+                    {
+                        <div class="col-6 col-lg-3 col-sm-4 col-xl-2">
+                            @await Html.PartialAsync("_MovieCard", movie)
+                        </div>
+                    }
+                }
             }
         </div>
     </div>
